k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopk8s
  labels:
    app: shopk8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopk8s
  template:
    metadata:
      labels:
        app: shopk8s
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: shopk8s
        image: 654654392564.dkr.ecr.us-east-1.amazonaws.com/shopk8s:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
