k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopk8s-svc
  labels:
    app: shopk8s
spec:
  type: NodePort
  selector:
    app: shopk8s
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30081
