k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopk8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shopk8s.18.215.244.253.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopk8s-svc
            port:
              number: 80
